--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dnd",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://maps.googleapis.com/maps/api",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
