--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "private": true,
   "proxy": "https://maps.googleapis.com/maps/api",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
     "bootstrap": "^4.4.1",
     "google-map-react": "^1.1.6",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1"
   },
   "scripts": {
