--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,11 @@
 [build]
   base = "frontend"
 
+[[redirects]]
+from = “/*”
+to = “/index.html”
+status = 200
+
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
   for = "/*"
