--- a/netlify.toml
+++ b/netlify.toml
@@ -2,12 +2,12 @@
   base = "frontend"
 
 [[redirects]]
-from = “/*”
-to = “/index.html”
-status = 200
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
   for = "/*"
-    [headers.values]
-    Access-Control-Allow-Origin = "*"
+  [headers.values]
+  Access-Control-Allow-Origin = "*"
