--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   base = "frontend"
 
 [[redirects]]
-  from = "/place"
+  from = "/place/*"
   to = "https://maps.googleapis.com/maps/api"
   status = 200
   force = true
