--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@
   to = "https://maps.googleapis.com/maps/api/:splat"
   status = 200
   force = true
-  headers = { Access-Control-Allow-Origin = "*", Authorization = “Bearer AIzaSyD431FCDfbeHQmnEUIsLkPDL-V5noxf2bo”}
+  headers = { Access-Control-Allow-Origin = '*', Authorization = “Bearer AIzaSyD431FCDfbeHQmnEUIsLkPDL-V5noxf2bo”}
 
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
