--- a/netlify.toml
+++ b/netlify.toml
@@ -3,12 +3,8 @@
 
 [[redirects]]
   from = "/place/*"
-  to = "https://maps.googleapis.com/maps/api/:splat"
+  to = "https://maps.googleapis.com/maps/api/place/:splat"
   status = 200
   force = true
+  headers = {Access-Control-Allow-Origin = "*"}
 
-[[headers]]
-  # Define which paths this specific [[headers]] block will cover.
-  for = "/*"
-  [headers.values]
-  Access-Control-Allow-Origin = "*"
