--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "frontend"
 
-[redirects]
+[[redirects]]
   from = "/place/*"
   to = "https://maps.googleapis.com/maps/api/place/:splat"
   status = 200
