--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "dnd",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://maps.googleapis.com/maps/api",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.9.9",
@@ -18,8 +19,10 @@
     "google-map-react": "^1.1.6",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
+    "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
+    "npm": "^6.14.5",
     "react": "^16.12.0",
     "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^1.0.0-beta.16",
