--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "dnd",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://maps.googleapis.com/maps/api",
+  // "proxy": "https://maps.googleapis.com/maps/api",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.9.9",
