--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,14 @@
   "name": "dnd",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://maps.googleapis.com/maps/api",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.48",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
@@ -20,6 +23,7 @@
     "graphql-tag": "^2.10.3",
     "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "npm": "^6.14.5",
     "react": "^16.12.0",
