--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-context": "^1.0.19",
+    "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.16",
     "bootstrap": "^4.4.1",
     "google-map-react": "^1.1.6",
@@ -24,7 +26,9 @@
     "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.27.0",
+    "mongodb": "^3.5.9",
     "node-sass": "^4.14.1",
+    "notistack": "^0.9.17",
     "npm": "^6.14.5",
     "react": "^16.12.0",
     "react-beautiful-dnd": "^12.2.0",
