--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "proxy": "https://maps.googleapis.com/maps/api",
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/client": "^3.2.5",
     "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
@@ -15,12 +15,6 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "apollo-boost": "^0.4.9",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link-context": "^1.0.19",
-    "apollo-link-error": "^1.1.13",
-    "apollo-link-http": "^1.5.16",
     "bootstrap": "^4.4.1",
     "google-map-react": "^1.1.6",
     "graphql": "^15.0.0",
@@ -30,7 +24,7 @@
     "moment": "^2.27.0",
     "mongodb": "^3.5.9",
     "node-sass": "^4.14.1",
-    "npm": "^6.14.8",
+    "npm": "^7.0.6",
     "react": "^16.12.0",
     "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^1.0.0-beta.16",
