--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "google-map-react": "^1.1.6",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
+    "history": "^5.0.0",
     "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.27.0",
