--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
 		"react-beautiful-dnd": "^12.2.0",
 		"react-bootstrap": "^1.0.0-beta.16",
 		"react-dom": "^16.12.0",
+		"react-ga": "^3.3.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "^3.4.4",
 		"semantic-ui-css": "^2.4.1",
