--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "apollo-server": "^2.17.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
+    "google-auth-library": "^6.1.3",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "jsonwebtoken": "^8.5.1",
