--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
 		"@types/react": "^16.9.49",
 		"@types/react-dom": "^16.9.8",
 		"bootstrap": "^4.4.1",
+		"cloudinary-react": "^1.6.8",
 		"google-map-react": "^1.1.6",
 		"graphql": "^15.0.0",
 		"graphql-tag": "^2.10.3",
@@ -25,7 +26,7 @@
 		"moment": "^2.27.0",
 		"mongodb": "^3.5.9",
 		"node-sass": "^4.14.1",
-		"npm": "^7.0.6",
+		"npm": "^7.3.0",
 		"react": "^16.12.0",
 		"react-beautiful-dnd": "^12.2.0",
 		"react-bootstrap": "^1.0.0-beta.16",
