--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 		"@types/react-dom": "^16.9.8",
 		"bootstrap": "^4.4.1",
 		"cloudinary-react": "^1.6.8",
+		"cypress-file-upload": "^4.1.1",
 		"google-map-react": "^1.1.6",
 		"graphql": "^15.0.0",
 		"graphql-tag": "^2.10.3",
