--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
 		"history": "^5.0.0",
 		"install": "^0.13.0",
 		"jwt-decode": "^2.2.0",
+		"lodash": "^4.17.21",
 		"marked": "^1.2.8",
 		"moment": "^2.27.0",
 		"mongodb": "^3.5.9",
