--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -34,7 +34,8 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "noFallthroughCasesInSwitch": true
   },
   "exclude": [
     "dist",
