--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,8 @@
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "^4.0.3",
 		"semantic-ui-css": "^2.4.1",
-		"semantic-ui-react": "^0.88.2"
+		"semantic-ui-react": "^0.88.2",
+		"subscriptions-transport-ws": "^0.9.18"
 	},
 	"scripts": {
 		"start": "react-scripts start",
