--- a/package.json
+++ b/package.json
@@ -4,17 +4,8 @@
 	"description": "1. clone the project",
 	"main": "index.js",
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "cross-env CI=true react-scripts test --env=jsdom",
-		"eject": "react-scripts eject",
-		"lint": "eslint src"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "npm run lint && npm test",
-			"pre-push": "npm run lint && npm test"
-		}
+		"test": "cd frontend && npx cypress run",
+		"prepare": "husky install"
 	},
 	"repository": {
 		"type": "git",
@@ -27,7 +18,6 @@
 	},
 	"homepage": "https://github.com/WJKwok/TravelPlanner#readme",
 	"devDependencies": {
-		"cross-env": "^7.0.3",
 		"husky": "^6.0.0"
 	}
 }
