--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
 		"moment": "^2.27.0",
 		"mongodb": "^3.5.9",
 		"node-sass": "^4.14.1",
-		"npm": "^7.3.0",
+		"npm": "^7.20.5",
 		"react": "^16.12.0",
 		"react-beautiful-dnd": "^12.2.0",
 		"react-bootstrap": "^1.0.0-beta.16",
@@ -40,7 +40,8 @@
 		"react-scripts": "^4.0.3",
 		"semantic-ui-css": "^2.4.1",
 		"semantic-ui-react": "^0.88.2",
-		"subscriptions-transport-ws": "^0.9.18"
+		"serve": "^12.0.0",
+		"subscriptions-transport-ws": "^0.10.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
