--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"@testing-library/user-event": "^7.2.1",
 		"@types/react": "^16.9.49",
 		"@types/react-dom": "^16.9.8",
+		"apollo3-cache-persist": "^0.11.0",
 		"bootstrap": "^4.4.1",
 		"cloudinary-react": "^1.6.8",
 		"cypress-file-upload": "^4.1.1",
@@ -28,7 +29,6 @@
 		"marked": "^1.2.8",
 		"moment": "^2.27.0",
 		"mongodb": "^3.5.9",
-		"node-sass": "^4.14.1",
 		"npm": "^7.20.5",
 		"react": "^16.12.0",
 		"react-beautiful-dnd": "^12.2.0",
@@ -40,7 +40,6 @@
 		"react-scripts": "^4.0.3",
 		"semantic-ui-css": "^2.4.1",
 		"semantic-ui-react": "^0.88.2",
-		"serve": "^12.0.0",
 		"subscriptions-transport-ws": "^0.10.0"
 	},
 	"scripts": {
