--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
 		"@testing-library/user-event": "^7.2.1",
 		"@types/react": "^16.9.49",
 		"@types/react-dom": "^16.9.8",
+		"apollo-link-queue": "^3.1.0",
+		"apollo-link-serialize": "^4.0.0",
 		"apollo3-cache-persist": "^0.11.0",
 		"bootstrap": "^4.4.1",
 		"cloudinary-react": "^1.6.8",
@@ -38,6 +40,7 @@
 		"react-google-login": "^5.1.25",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "^4.0.3",
+		"safe-json-stringify": "^1.2.0",
 		"semantic-ui-css": "^2.4.1",
 		"semantic-ui-react": "^0.88.2",
 		"subscriptions-transport-ws": "^0.10.0"
